# nearby

./: .bazelproject  .bazelrc  .clang-format  .gitignore  LINUX_CONTRIBUTING.md  MODULE.bazel  Package.swift  README.md
.devcontainer/bazel/: Dockerfile  devcontainer.json
.devcontainer/bazelclion/: Dockerfile  devcontainer.json
.github/workflows/: release-minimal-appimage.yaml  release-nearby-qml-tray.yaml  validate.yaml
connections/: BUILD  core.cc
connections/file_share/: BUILD  main.cc
connections/implementation/: base_endpoint_channel.cc  payload_manager.cc
connections/implementation/analytics/: analytics_recorder_impl.cc  analytics_recorder_impl.h
connections/implementation/flags/: nearby_connections_feature_flags.h
connections/implementation/mediums/: ble_v2.cc
google/protobuf/: BUILD
internal/platform/: BUILD  wifi_lan.cc
internal/platform/implementation/: BUILD  presence_advertiser_demo.cc
presence/: BUILD  presence_scanner_demo.cc
presence/implementation/: BUILD
sharing/: BUILD  incoming_share_session.cc  incoming_share_session.h  nearby_connections_service.cc  nearby_connections_types.h  nearby_sharing_service_factory.cc  nearby_sharing_service_factory.h  nearby_sharing_service_impl.cc  nearby_sharing_service_impl.h  nearby_sharing_service_impl_test.cc
sharing/certificates/: BUILD  fake_nearby_share_certificate_manager.cc  fake_nearby_share_certificate_manager.h  nearby_share_certificate_manager_impl.cc  nearby_share_certificate_manager_impl.h
sharing/contacts/: BUILD  nearby_share_contact_manager_impl.cc  nearby_share_contact_manager_impl.h
sharing/fast_initiation/: BUILD
sharing/internal/api/: BUILD  preference_manager.h
sharing/internal/base/: utf_string_conversions.h
sharing/internal/public/: BUILD
sharing/internal/test/: fake_preference_manager.cc  fake_preference_manager.h
sharing/linux/: ANDROID_COMPATIBILITY.md  BUILD  IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  README.md  install_nearby_connections_service.sh  install_nearby_sharing_service.sh  nearby_connections_adapter.cc  nearby_connections_adapter.h  nearby_connections_api.cc  nearby_connections_api.h  nearby_connections_api_test.cc  nearby_connections_qt_facade.cc  nearby_connections_qt_facade.h  nearby_connections_service_linux.cc  nearby_connections_service_linux.h  nearby_fast_init.cc  nearby_fast_init_ble_beacon.h  nearby_fast_init_manager.cc  nearby_fast_init_manager.h  nearby_noop_analytics_recorder.h  nearby_sharing_api.cc  nearby_sharing_api.h  nearby_sharing_app.cc  nearby_sharing_app_BUILD  nearby_sharing_cli.cc  nearby_sharing_service_linux.cc  nearby_sharing_service_linux.h  rules_qt_wayland.patch  simple_example.cc
sharing/linux/app/: AppContent.qml  BUILD  Drop.qml  EventBus.qml  IncomingShare.qml  SearchingDevices.qml  ShareTarget.qml  Sidebar.qml  Targets.qml  TransferCard.qml  backend.cc  backend.h  main.cc  main.qml  native_file_logging.cc  native_file_logging.h  native_file_logging_test.cc  nearby_sharing_dbus_client.cc  nearby_sharing_dbus_client.h  qmldir  resources.qrc
sharing/linux/daemon/: BUILD  daemon_service.cc  daemon_service.h  daemon_service_test.cc  ipc_server.cc  ipc_server.h  ipc_server_test.cc  main.cc  main.h  nearby_sharing_client.h  nearby_sharing_dbus_interface.xml  nearby_sharing_dbus_service.cc  nearby_sharing_dbus_service.h  nearby_sharing_dbus_service_test.cc  nearby_sharing_server.h
sharing/linux/platform/: linux_account_manager.cc  linux_account_manager.h  linux_platform_components.cc  linux_platform_components.h  linux_preference_manager.cc  linux_preference_manager.h  linux_sharing_platform.cc  linux_sharing_platform.h  platform_util.cc  platform_util.h  system_clock_shim.cc
sharing/linux/qml_tray_app/: CMakeLists.txt  FileShareTray.qml  Main.qml  README.md  file_share_state.cc  file_share_state.h  file_share_tray_controller.cc  file_share_tray_controller.h  file_share_tray_main.cpp  install_nearby_file_share.sh  main.cpp  nearby-file-share.desktop  nearby_tray_controller.cc  nearby_tray_controller.h  notification_manager.cpp  notification_manager.h  qr_code_generator.cc  qr_code_generator.h  resources.qrc  resources_file_share.qrc  share_target_model.h  status_mapper.cc  status_mapper.h  string_utils.cc  string_utils.h  transfer_model.h
sharing/linux/qml_tray_app/AppDir/: .DirIcon  AppRun  nearby-file-share.desktop
sharing/linux/qml_tray_app/AppDir/usr/lib/: libQt6DBus.so.6  libQt6OpenGL.so.6  libQt6WaylandClient.so.6  libQt6WlShellIntegration.so.6  libXau.so.6  libXext.so.6  libb2.so.1  libbrotlicommon.so.1  libbrotlidec.so.1  libbz2.so.1  libdbus-1.so.3  libffi.so.8  libgraphite2.so.3  liblzma.so.5  libpng16.so.16  libwayland-cursor.so.0  libwayland-egl.so.1  libxkbcommon.so.0  libxml2.so.2  libzstd.so.1
sharing/linux/qml_tray_app/build-appimage/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  nearby_qml_file_tray_app
sharing/linux/qml_tray_app/build-appimage/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
sharing/linux/qml_tray_app/build-appimage/.qt/deploy_qml_imports/: nearby_qml_file_tray_app.cmake
sharing/linux/qml_tray_app/build-appimage/.qt/qml_imports/: nearby_qml_file_tray_app_build.cmake  nearby_qml_file_tray_app_build.rsp  nearby_qml_file_tray_app_conf.cmake  nearby_qml_file_tray_app_conf.rsp
sharing/linux/qml_tray_app/build-appimage/nearby_qml_file_tray_app_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
sharing/linux/qml_tray_app/build-appimage/nearby_qml_file_tray_app_autogen/EWIEGA46WW/: moc_file_share_tray_controller.cpp  moc_file_share_tray_controller.cpp.d  moc_notification_manager.cpp  moc_notification_manager.cpp.d  qrc_resources_file_share.cpp
sharing/linux/qml_tray_app/cmake/: BuildNearbySoIfMissing.cmake  BuildNearbyStaticArchive.cmake
sharing/linux/qml_tray_app/components/: AnimatedBlob.qml  AppHeader.qml  DeviceCard.qml  SendUrlPanel.qml  SettingsPanel.qml  SideBar.qml  TransferCard.qml
sharing/linux/qml_tray_app/icons/: README.txt
sharing/linux/stubs/: BUILD  grpc_async_client_factory.h  (+3 more)
util/hash/: BUILD  highway_fingerprint.h
(+184 files in other folders)
